force-app/main/default/objects/At_Risk_Red_Alert__c/At_Risk_Red_Alert__c.object-meta.xml
<CustomObject>
    <label>At Risk/Red Alert</label>
    <nameField>
        <label>At Risk/Red Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>At Risk/Red Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>