force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>At Risk/Red Alert</relationshipLabel>
    <relationshipName>At_Risk_Red_Alert</relationshipName>
    <type>Lookup</type>
</CustomField>