force-app/main/default/objects/At_Risk_Red_Alert__c/fields/AtRisk_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>AtRisk_Entered_Date__c</fullName>
    <label>At Risk Entered Date</label>
    <type>DateTime</type>
</CustomField>