force-app/main/default/objects/At_Risk_Red_Alert__c/fields/District_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_ID__c</fullName>
    <formula>Largest_Market_At_Risk__r.District_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Manager ID</label>
    <type>Text</type>
</CustomField>