force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_At_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>IME_At_Risk_Reason__c</fullName>
    <inlineHelpText>Reason the customer wants to leave IM</inlineHelpText>
    <label>At Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to Influence - Cost</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Customer Change</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Changed Solution</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Liquidation/ Administration</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Gone Away</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Empty Account/No Activity</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Not Invited</fullName>
            </value>
            <value>
                <fullName>Unable to Influence - Site Closure</fullName>
            </value>
            <value>
                <fullName>Able to Influence - Price</fullName>
            </value>
            <value>
                <fullName>Able to Influence - Tender/Contract</fullName>
            </value>
            <value>
                <fullName>Able to Influence - Our Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>