force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>IME_Customer_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account ID</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>At Risk/Red Alert</relationshipLabel>
    <relationshipName>At_Risk_Red_Alert</relationshipName>
    <type>Lookup</type>
</CustomField>