force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Customer_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>IME_Customer_Notice_Period__c</fullName>
    <inlineHelpText>Number of Months of the Customer Notice Period</inlineHelpText>
    <label>Customer Notice Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>