force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Notes__c.field-meta.xml
<CustomField>
    <fullName>IME_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>