force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Notified_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IME_Notified_Entered_Date__c</fullName>
    <label>Notified Entered Date</label>
    <type>DateTime</type>
</CustomField>