force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Returned_to_BAU_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IME_Returned_to_BAU_Entered_Date__c</fullName>
    <label>Returned to BAU Entered Date</label>
    <type>DateTime</type>
</CustomField>