force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>IME_Sales_Segment__c</fullName>
    <formula>TEXT(Account_Name__r.IME_Sales_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IME Sales Segment</label>
    <type>Text</type>
</CustomField>