force-app/main/default/objects/At_Risk_Red_Alert__c/fields/IME_Terminated_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IME_Terminated_Entered_Date__c</fullName>
    <label>Terminated Entered Date</label>
    <type>DateTime</type>
</CustomField>