force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Largest_Market_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Largest_Market_At_Risk__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the Largest Market At Risk</inlineHelpText>
    <label>Largest Market At Risk</label>
    <referenceTo>Parent_Billing_Market__c</referenceTo>
    <relationshipLabel>At Risk/Red Alert</relationshipLabel>
    <relationshipName>At_Risk_Red_Alert</relationshipName>
    <type>Lookup</type>
</CustomField>