force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Id__c</fullName>
    <inlineHelpText>This field shows the Status of populating the Financials (IMGA) fields</inlineHelpText>
    <label>Calculation Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>