force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Product_Line_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_At_Risk__c</fullName>
    <inlineHelpText>Product type At Risk</inlineHelpText>
    <label>Product Line At Risk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>SHRED</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>