force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Region_SVP__c.field-meta.xml
<CustomField>
    <fullName>Region_SVP__c</fullName>
    <formula>Largest_Market_At_Risk__r.Region_SVP__r.FirstName&amp;&quot; &quot; &amp;Largest_Market_At_Risk__r.Region_SVP__r.LastName</formula>
    <label>Region SVP</label>
    <type>Text</type>
</CustomField>