force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Region_SVP_ID__c.field-meta.xml
<CustomField>
    <fullName>Region_SVP_ID__c</fullName>
    <formula>Largest_Market_At_Risk__r.Region_SVP__c</formula>
    <label>Region SVP ID</label>
    <type>Text</type>
</CustomField>