force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Account_Name__r.IMGA_Owner__r.FirstName&amp;&quot; &quot;&amp;Account_Name__r.IMGA_Owner__r.LastName</formula>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>