force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID__c</fullName>
    <formula>Account_Name__r.IMGA_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep ID</label>
    <type>Text</type>
</CustomField>