force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Saved_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Saved_Entered_Date__c</fullName>
    <label>Saved Entered Date</label>
    <type>DateTime</type>
</CustomField>