force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using to track status change while the batch is processing...</description>
    <label>Status Change</label>
    <type>Checkbox</type>
</CustomField>