force-app/main/default/objects/At_Risk_Red_Alert__c/fields/Total_Annual_Revenue_RM__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Revenue_RM__c</fullName>
    <inlineHelpText>Revenue includes - Consulting, DMS, and RM</inlineHelpText>
    <label>Total Annual Revenue RM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>