force-app/main/default/objects/At_Risk_Red_Alert__c/recordTypes/Retention_Large.recordType-meta.xml
<RecordType>
    <fullName>Retention_Large</fullName>
    <active>true</active>
    <label>Retention Large</label>
</RecordType>