force-app/main/default/objects/At_Risk_Red_Alert__c/recordTypes/Retentions_UK.recordType-meta.xml
<RecordType>
    <fullName>Retentions_UK</fullName>
    <active>true</active>
    <label>Retentions UK</label>
</RecordType>